fix: Buttons, Spacing, Leading Zeros

--- a/src/index.css
+++ b/src/index.css
@@ -16,25 +16,6 @@ body {
   font-family: "Roboto Mono", monospace;
 }
 
-@keyframes floatOffScreen {
-  to {
-    transform: translateX(800px);
-  }
-}
-
-@keyframes floatOffScreenRight {
-  to {
-    transform: translateX(800px);
-  }
-}
-
-.animate-float-off-screen {
-  animation: floatOffScreen 5s ease-out;
-}
-
-.animate-float-off-screen-right {
-  animation: floatOffScreenRight 4s ease-out;
-}
 
 
 .loading-line {
